@@ -7,6 +7,7 @@ PostgreSQL PDO: Escape bytea values (bug #218)
 CockroachDB: Display version
 CockroachDB: Recognize unique_rowid() as auto_increment
 MS SQL: Fix editing rows with datetime column in primary key
+MongoDB: Move to plugin
 CSS: Add dark theme
 
 Adminer 5.0.4 (released 2025-03-11):
